@@ -1038,7 +1038,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '33';
+$wgStyleVersion = '34';
 
 
 # Server-side caching:
